--- a/styles.css
+++ b/styles.css
@@ -1439,7 +1439,7 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
 }
 .slider__contents .sliderLeft{
   width: 300px;
-  background: url('images/backgrounds/roadmap.jpeg') no-repeat;
+  background: url('resources/backs/abstract-grunge-decorative-relief-navy-blue-stucco-wall-texture-wide-angle-rough-colored-background_1258-28311.jpg') no-repeat;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: cover;
