--- a/styles.css
+++ b/styles.css
@@ -1523,9 +1523,11 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
     width: 400px;
   }
 
-  .partners .PartnersContent .row1, .row2{
-    display: flex;
-    flex-direction: column;
+  .partners .PartnersContent .row1 {
+    overflow-x: scroll !important;
+    overflow-y: hidden !important;
+    white-space: nowrap !important;
+    width: 100% !important;
   }
 
   footer{
