--- a/styles.css
+++ b/styles.css
@@ -1507,6 +1507,7 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
     align-items: center;
     text-align: center;
   }
+  
 
   .cat{
     margin-top: 30px;
@@ -1523,12 +1524,17 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
     width: 400px;
   }
 
-  .partners .PartnersContent .row1 {
-    overflow-x: scroll !important;
-    overflow-y: hidden !important;
-    white-space: nowrap !important;
-    width: 100% !important;
+  .partners .PartnersContent .row1, .row2, .row3{
+      width: 490px;
+      height: 300px;
+      overflow-x: auto;
+      overflow-y: hidden;
+      padding: 53px;
   }
+
+  
+
+
 
   footer{
     display: flex;
