--- a/styles.css
+++ b/styles.css
@@ -1278,7 +1278,7 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
     .vidSec .overlay .title{
       font-size: 34px;
       line-height: 60px;
-      margin-top: -40px;
+      margin-top: -45px;
       color: goldenrod;
     }
 
@@ -1353,7 +1353,7 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
     }
 
     .royalLeft{
-      width: 90vw !important;
+      width: 100vw !important;
       overflow-x: hidden !important ;
     }
 
@@ -1387,6 +1387,7 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      padding-bottom: 30px;
     }
 
     .slider__contents .active{
@@ -1399,6 +1400,11 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
 
     .slider__contents .sliderLeft{
       width: 100px;
+      margin-top: 30px;
+    }
+
+    .slider__contents .slider__txt{
+      margin-bottom: 10px;
     }
 
   .slider__contents .sliderRight{
@@ -1407,11 +1413,11 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
     }
   
   .slider__contents:nth-child(2) .sliderLeft{
-      width: 200px;
+      width: 200px !important;
     }
   
   .slider__contents:nth-child(2) .sliderRight{
-      width: 400px;
+      width: 400px !important;
   
   }
 
@@ -1427,16 +1433,41 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
       height: 300px;
   }
 
+
 #gan{
   margin-right: 3px !important;
-  width: 300px;
+  width: 300px !important;
+  background-size: 1300px !important;
 
 }
+  /*
+#garg{
+  margin-left:-9px !important;
+}
+
 
 #reg{
   margin-right: -5px !important;
-
 }
+*/
+
+.slider__nav:checked:nth-of-type(1) ~ .slider__inner {
+  left: 5%;
+}
+.slider__nav:checked:nth-of-type(2) ~ .slider__inner {
+  left: -105%;
+}
+.slider__nav:checked:nth-of-type(3) ~ .slider__inner {
+  left: -215%;
+}
+.slider__nav:checked:nth-of-type(4) ~ .slider__inner {
+  left: -310%;
+}
+.slider__nav:checked:nth-of-type(5) ~ .slider__inner {
+    left: -410%;
+  }
+
+
 .slider__contents .sliderLeft{
   width: 300px;
   background: url('resources/backs/abstract-grunge-decorative-relief-navy-blue-stucco-wall-texture-wide-angle-rough-colored-background_1258-28311.jpg') no-repeat;
@@ -1529,7 +1560,7 @@ border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
       height: 300px;
       overflow-x: auto;
       overflow-y: hidden;
-      padding: 53px;
+      padding: 60px;
   }
 
   
